{
  "version": 4,
  "terraform_version": "1.8.2",
  "serial": 52,
  "lineage": "5aee8fcb-7a05-2943-d469-d001ecc5042d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "KRK_LoadBalancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:149028371915:loadbalancer/app/KRK-LoadBalancer/25e16860ac7c424b",
            "arn_suffix": "app/KRK-LoadBalancer/25e16860ac7c424b",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "KRK-LoadBalancer-1307640239.eu-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:149028371915:loadbalancer/app/KRK-LoadBalancer/25e16860ac7c424b",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "KRK-LoadBalancer",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0b3bde95cb85d9d07"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01bac5268bd103c55"
              },
              {
                "subnet_id": "subnet-02ae3d0545ef9967e"
              },
              {
                "subnet_id": "subnet-0655f72c900baddc5"
              }
            ],
            "subnets": [
              "subnet-01bac5268bd103c55",
              "subnet-02ae3d0545ef9967e",
              "subnet-0655f72c900baddc5"
            ],
            "vpc_id": "vpc-0035b5ae8bbbefd3f",
            "xff_header_processing_mode": "append",
            "zone_id": "Z32O12XQLNTSW2"
          },
          "dependencies": [
            "aws_security_group.KRK_SecurityGroup_LB"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "KRK_Listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:149028371915:listener/app/KRK-LoadBalancer/25e16860ac7c424b/d3e3119f9becc2ed",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:149028371915:targetgroup/KRK-TargetGroup/273f84142d24c65b",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:149028371915:listener/app/KRK-LoadBalancer/25e16860ac7c424b/d3e3119f9becc2ed",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:149028371915:loadbalancer/app/KRK-LoadBalancer/25e16860ac7c424b",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.KRK_LoadBalancer",
            "aws_lb_target_group.KRK_TargetGroup",
            "aws_security_group.KRK_SecurityGroup_LB"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "KRK_TargetGroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:149028371915:targetgroup/KRK-TargetGroup/273f84142d24c65b",
            "arn_suffix": "targetgroup/KRK-TargetGroup/273f84142d24c65b",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:149028371915:targetgroup/KRK-TargetGroup/273f84142d24c65b",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:eu-west-1:149028371915:loadbalancer/app/KRK-LoadBalancer/25e16860ac7c424b"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "KRK-TargetGroup",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0035b5ae8bbbefd3f"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "KRK_SecurityGroup_EC2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:149028371915:security-group/sg-00b036e4091100e00",
            "description": "Security group for EC2 instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00b036e4091100e00",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b3bde95cb85d9d07"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "KRK_SecurityGroup_EC2",
            "name_prefix": "",
            "owner_id": "149028371915",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0035b5ae8bbbefd3f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.KRK_SecurityGroup_LB"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "KRK_SecurityGroup_LB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:149028371915:security-group/sg-0b3bde95cb85d9d07",
            "description": "Security group for Load Balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b3bde95cb85d9d07",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "KRK_SecurityGroup_LB",
            "name_prefix": "",
            "owner_id": "149028371915",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0035b5ae8bbbefd3f"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}